--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -54,11 +54,11 @@ jobs:
           composer show -D
 
       - name: Execute tests (with deprecations)
-        run: ./testbench package:test --parallel --exclude-group commander,database,session
+        run: ./testbench package:test --parallel --exclude-group without-parallel,commander,database,session
         if: matrix.dependencies == 'highest'
 
       - name: Execute tests (without deprecations)
-        run: ./testbench package:test --parallel --exclude-group commander,database,session,deprecations
+        run: ./testbench package:test --parallel --exclude-group without-parallel,commander,database,session,deprecations
         env:
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
         if: matrix.dependencies != 'highest'
