--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
         "laravel/framework": "<10.40 || >=11.0.0",
         "nunomaduro/collision": "<6.4.0 || >=7.0.0 <7.4.0 || >=8.0.0",
         "orchestra/workbench": "<1.0.0",
-        "phpunit/phpunit": "<9.6.0 || 10.5.4 || >=10.6.0"
+        "phpunit/phpunit": "<9.6.0 >=10.1.0 || 10.5.4 || >=10.6.0"
     },
     "suggest": {
         "ext-pcntl": "Required to use all features of the console signal trapping.",
