--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -34,3 +34,8 @@ parameters:
 			message: "#^Call to an undefined method Illuminate\\\\Contracts\\\\Foundation\\\\Application\\:\\:environmentPath\\(\\)\\.$#"
 			count: 1
 			path: src/Bootstrap/LoadEnvironmentVariables.php
+
+		-
+			message: "#^Parameter \\#2 \\$callback of function transform expects callable\\(object\\)\\: mixed, Closure\\(Orchestra\\\\Testbench\\\\Contracts\\\\Attributes\\\\Resolvable\\)\\: mixed given\\.$#"
+			count: 1
+			path: src/PHPUnit/AttributeParser.php
