--- a/.github/workflows/strict-tests.yaml
+++ b/.github/workflows/strict-tests.yaml
@@ -44,7 +44,7 @@ jobs:
         uses: "ramsey/composer-install@v2"
         with:
           dependency-versions: "${{ matrix.dependencies }}"
-          composer-options: "--prefer-dist --no-cache --with='phpunit/phpunit:${{ matrix.phpunit }}'"
+          composer-options: "--prefer-dist --no-cache --with 'phpunit/phpunit:${{ matrix.phpunit }}'"
 
       - name: Installed dependencies
         run: |
