--- a/.github/workflows/strict-tests.yaml
+++ b/.github/workflows/strict-tests.yaml
@@ -27,7 +27,7 @@ jobs:
         experimental:
           - false
 
-    name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }}
+    name: PHP${{ matrix.php }} with PHPUnit:${{ matrix.phpunit }}
 
     steps:
       - name: Checkout code
@@ -44,7 +44,7 @@ jobs:
         uses: "ramsey/composer-install@v2"
         with:
           dependency-versions: "${{ matrix.dependencies }}"
-          composer-options: "--prefer-dist --no-cache --with 'phpunit/phpunit=${{ matrix.phpunit }}'"
+          composer-options: "--prefer-dist --no-cache --with phpunit/phpunit=${{ matrix.phpunit }}"
 
       - name: Installed dependencies
         run: |
