--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -46,7 +46,7 @@ jobs:
         uses: "ramsey/composer-install@v2"
         with:
           dependency-versions: "${{ matrix.dependencies }}"
-          composer-options: "--prefer-dist --no-cache --with phpunit/phpunit=${{ matrix.phpunit }}"
+          composer-options: "--prefer-dist --no-cache --with phpunit/phpunit:${{ matrix.phpunit }}"
 
       - name: Installed dependencies
         run: |
