--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "mockery/mockery": "^1.6",
         "phpstan/phpstan": "^1.10.50",
         "phpunit/phpunit": "^10.5 || ^11.0",
+        "spatie/laravel-ray": "^1.35",
         "symfony/process": "^7.0",
         "symfony/yaml": "^7.0",
         "vlucas/phpdotenv": "^5.4.1"
