--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,7 @@
         "brianium/paratest": "<7.3.0 || >=8.0.0",
         "laravel/framework": "<11.0.0 || >=12.0.0",
         "nunomaduro/collision": "<8.0.0 || >=9.0.0",
-        "phpunit/phpunit": "<10.5.0 || >=11.1.0"
+        "phpunit/phpunit": "<10.5.0 || 11.0.0 || >=11.1.0"
     },
     "suggest": {
         "ext-pcntl": "Required to use all features of the console signal trapping.",
