--- a/.github/workflows/audits.yaml
+++ b/.github/workflows/audits.yaml
@@ -1,48 +1,48 @@
-name: audits
+# name: audits
 
-on:
-  push:
-  pull_request:
-  schedule:
-    - cron: '0 0 * * *'
+# on:
+#   push:
+#   pull_request:
+#   schedule:
+#     - cron: '0 0 * * *'
 
-jobs:
-  audit-dependencies:
-    runs-on: ${{ matrix.os }}
-    continue-on-error: ${{ matrix.experimental }}
-    strategy:
-      matrix:
-        os:
-          - "ubuntu-latest"
-        php:
-          - 7.3
-          - 7.4
-          - '8.0'
-          - 8.1
-        experimental:
-          - true
+# jobs:
+#   audit-dependencies:
+#     runs-on: ${{ matrix.os }}
+#     continue-on-error: ${{ matrix.experimental }}
+#     strategy:
+#       matrix:
+#         os:
+#           - "ubuntu-latest"
+#         php:
+#           - 7.3
+#           - 7.4
+#           - '8.0'
+#           - 8.1
+#         experimental:
+#           - true
 
-    name: PHP${{ matrix.php }} on ${{ matrix.os }}
+#     name: PHP${{ matrix.php }} on ${{ matrix.os }}
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php }}
-          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, mysql, mysqli, pdo_mysql, bcmath, intl, fileinfo, :php-psr
-          coverage: none
+#       - name: Setup PHP
+#         uses: shivammathur/setup-php@v2
+#         with:
+#           php-version: ${{ matrix.php }}
+#           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, mysql, mysqli, pdo_mysql, bcmath, intl, fileinfo, :php-psr
+#           coverage: none
 
-      - name: Install dependencies
-        uses: "ramsey/composer-install@v2"
-        with:
-          dependency-versions: "highest"
-          composer-options: "--prefer-dist --prefer-stable --no-cache"
+#       - name: Install dependencies
+#         uses: "ramsey/composer-install@v2"
+#         with:
+#           dependency-versions: "highest"
+#           composer-options: "--prefer-dist --prefer-stable --no-cache"
 
-      - name: Installed dependencies
-        run: composer show -D
+#       - name: Installed dependencies
+#         run: composer show -D
 
-      - name: Audit dependencies
-        run: composer audit
+#       - name: Audit dependencies
+#         run: composer audit
